# lean-agentic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PUBLISH.md  README.md  package.json
docs/: ADR_001_ADVANCED_THEOREMS.md  ADVANCED_THEOREMS_ARCHITECTURE.md  AGENTDB_100_PERCENT.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_SUMMARY.md  ED25519_PROOF_ATTESTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PRODUCTION_EXAMPLES.md  PUBLISHING.md  README.md  RUNBOOK.md  RUNTIME_SUMMARY.md  SWARM_IMPLEMENTATION_COMPLETE.md  TECHNOLOGY_EVALUATION.md  TESTING_SUMMARY.md  elaboration-summary.md  runtime-implementation.md
docs/agentdb/: AGENTDB_TOOLS_VERIFIED.md  AGENTDB_V1.5.3_VERIFICATION.md  AGENTDB_V1.5.5_FINAL.md  AGENTDB_V1.6.0_VALIDATION_REPORT.md
docs/architecture/: 00-overview.md  01-memory-model.md  02-proof-kernel.md  03-performance.md  04-integration-points.md  README.md
docs/decisions/: ADR-001-hash-consing.md
docs/diagrams/: c4-container.md  c4-system-context.md
docs/guides/: EXAMPLES_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  LEAN_AGENTIC_AGENTDB_INTEGRATION.md
docs/reports/: ARCHITECTURE-SUMMARY.md  CLAUDE_SKILLS_CREATED.md  COMPILATION_STATUS.md  WASM_COMPILER_IMPLEMENTATION.md  elaboration-implementation.md
docs/theorems/: CHURCH_ROSSER_IMPLEMENTATION_COMPLETE.md  CHURCH_ROSSER_THEOREM.md  FORMAL_PROOF_HASHCONS_CONFLUENCE.md  HASH_CONSING_CONFLUENCE_THEOREM.md  NEW_THEOREM_ACHIEVEMENT.md  THEOREM_IMPLEMENTATION_GUIDES.md  THEOREM_RESEARCH_REPORT.md  THEOREM_ROADMAP.md
docs/validation/: WASM_VERIFIED.md
examples/: 01_hello_world.rs  02_verified_calculator.rs  03_ai_verified_scraper.rs  04_self_healing_database.rs  05_browser_theorem_prover.rs  cost_savings_demo.rs  ed25519_proof_signing.rs  inductive.lean  simple.lean  theorems.lean
examples/finance/: verified_finance_agent.rs
examples/grid-operator/: safety_bounded_grid.rs
examples/memory-copilot/: explainable_memory.rs
examples/trading/: risk_bounded_trading.rs
examples/wasm-demo/: index.html  leanr_wasm.js  leanr_wasm_bg.wasm  theorem_prover.html
lean-agentic/: Cargo.toml  README.md
lean-agentic/src/: conversion.rs  environment.rs  level.rs  unification.rs
leanr-compat/: Cargo.toml
leanr-core/: Cargo.toml
leanr-core/src/: arena.rs  context.rs  conversion.rs  environment.rs  lib.rs  symbol.rs  term.rs  typechecker.rs  unification.rs
leanr-elab/: Cargo.toml
leanr-elab/src/: context.rs  elaborate.rs  implicit.rs  lib.rs  metavar.rs
leanr-eval-lite/: Cargo.toml
leanr-eval-lite/src/: cache.rs  lib.rs  normalize.rs  reduction.rs
leanr-inductive/: Cargo.toml
leanr-rag-gateway/: Cargo.toml  README.md
leanr-rag-gateway/examples/: demo.rs
leanr-rag-gateway/src/: audit.rs  lib.rs  policy.rs  proof.rs  router.rs
leanr-syntax/: Cargo.toml
leanr-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  span.rs
leanr-theorems/: Cargo.toml  README.md  demo.html
leanr-theorems/examples/: church_rosser_demo.rs  hashcons_confluence_proof.rs
leanr-theorems/src/: confluence.rs  hashcons_confluence.rs  lib.rs  wasm.rs
leanr-wasm/: Cargo.toml
leanr-wasm/src/: lib.rs
npm/lean-agentic/: COMPREHENSIVE-DEMO.md  README.md  VERIFICATION.md  package.json
npm/lean-agentic/cli/: index.js
npm/lean-agentic/docs/: FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  NPM_PUBLICATION.md  NPM_PUBLISHING.md  PACKAGE_READY.md  TEST_SUMMARY.md  THEOREM_VALIDATION.md  VERIFICATION.md
npm/lean-agentic/examples/: agentdb-example.js  node-example.js  web-example.html
npm/lean-agentic/mcp/: config.json  server.js  test-client.js
npm/lean-agentic/scripts/: build.js
npm/lean-agentic/src/: agentdb-integration-simple.js  agentdb-integration.js  index.js  node.js
npm/lean-agentic/tests/theorems/: basic-theorems.test.js  dependent-types.test.js  performance-theorems.test.js  run-all-tests.js
npm/lean-agentic/wasm-node/: leanr_wasm.d.ts  leanr_wasm.js  leanr_wasm_bg.wasm  package.json
npm/lean-agentic/wasm-web/: leanr_wasm.d.ts  leanr_wasm_bg.wasm  leanr_wasm_bg.wasm.d.ts  package.json
plans/: lean-agentic.md  lean-examples.md  lean-rust.md
runtime/: Cargo.toml  README.md
runtime/benches/: message_passing.rs  orchestration.rs  scheduler.rs
runtime/examples/: quorum_consensus.rs  trading_swarm.rs
runtime/src/: capabilities.rs  lib.rs  mailbox.rs  message.rs  orchestration.rs  primitives.rs  profile.rs  runtime.rs  scheduler.rs  topology.rs
src/: jit_runtime.rs  lib.rs  llm_compiler.rs  multi_lane.rs
src/agentdb/: causal_graph.rs  episode_store.rs  explainable_recall.rs  memory_consolidation.rs  mod.rs  reasoning_bank.rs  vector_store.rs
src/jit-runtime/: baseline_jit.rs  interpreter.rs  max_opt_jit.rs  mod.rs  optimizing_jit.rs  osr.rs  profiling.rs
src/llm-compiler/: auto_vectorization.rs  mod.rs  smt_validation.rs  test_synthesis.rs  xla_runtime.rs
src/multi-lane/: cost_tracker.rs  lane_selector.rs  mod.rs  performance_predictor.rs
tests/: integration_test.rs
tests/benchmarks/: benchmark_suite.rs
tests/elaboration/: test_simple.rs
tests/unit/: rag_gateway_tests.rs
