[workspace]
resolver = "2"
members = [
    "leanr-syntax",
    "lean-agentic",  # Core library (formerly leanr-core)
    "leanr-elab",
    "leanr-inductive",
    "leanr-eval-lite",
    "leanr-wasm",
    "leanr-compat",
    "leanr-rag-gateway",
    "leanr-theorems",  # State-of-art theorem implementations
    "runtime",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["ruv.io", "github.com/ruvnet"]
license = "Apache-2.0"
repository = "https://github.com/agenticsorg/lean-agentic"
homepage = "https://ruv.io"
documentation = "https://docs.rs/lean-agentic"
keywords = ["lean", "theorem-prover", "dependent-types", "formal-verification", "agentic"]
categories = ["development-tools", "mathematics", "wasm"]

[workspace.dependencies]
# Shared dependencies across all crates
hashbrown = "0.14"
rustc-hash = "2.0"
bumpalo = "3.16"
im = "15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Ed25519 cryptographic signing
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# WASM-specific
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[package]
name = "leanr"
description = "Lean Rust: Formally verified agentic programming language with dependent types, Ed25519 proof signatures, and actor runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/leanr"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Ed25519 signing
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "ed25519_proof_signing"
required-features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Benchmarks moved to individual crates
