[package]
name = "leanr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Using std collections to avoid network dependency issues
# hashbrown = { workspace = true }
# rustc-hash = { workspace = true }
# bumpalo = { workspace = true }
# im = { workspace = true }
# serde = { workspace = true, optional = true }
# thiserror = { workspace = true }
# tracing = { workspace = true }

[features]
default = []
serde = []
