[package]
name = "leanr-eval-lite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leanr-core = { path = "../leanr-core" }
hashbrown.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "leanr-core/serde"]
deterministic = []

[dev-dependencies]
criterion = "0.5"
