[package]
name = "leanr-eval-lite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lean-agentic = { version = "0.3.0", path = "../lean-agentic" }
hashbrown.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "lean-agentic/serde"]
deterministic = []

[dev-dependencies]
criterion = "0.5"
