[package]
name = "leanr-theorems"
version = "0.1.0"
edition = "2021"

[dependencies]
leanr-core = { path = "../lean-agentic/leanr-core" }
leanr-eval-lite = { path = "../leanr-eval-lite" }
hashbrown = "0.14"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "confluence_bench"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
