[package]
name = "leanr-theorems"
version = "0.1.0"
edition = "2021"

[dependencies]
lean-agentic = { path = "../lean-agentic" }
leanr-eval-lite = { path = "../leanr-eval-lite" }
hashbrown = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[lib]
crate-type = ["cdylib", "rlib"]
